# Ai-classroom-docker-

./: .gitignore  Dockerfile  EduSense_Semester_Project_Report.txt  commandtostart.txt  features.md  package-lock.json  package.json  replit.md  reproduce-issue.ts  start-all.sh  test-join.ts  test-pdf.ts  testing_report.md  whatiknow.txt
client/src/: App.tsx  index.css
client/src/__tests__/: engagement.test.ts
client/src/components/: app-sidebar.tsx  assignment-submit.tsx  doubt-solver.tsx  face-monitor.tsx  notification-bell.tsx  page-header.tsx  pdf-reader.tsx  stat-card.tsx
client/src/hooks/: use-auth.ts
client/src/lib/: auth.ts  queryClient.ts  socket.ts
client/src/pages/: login.tsx
client/src/pages/admin/: classes.tsx  dashboard.tsx  users.tsx
client/src/pages/student/: dashboard.tsx  messages.tsx  profile.tsx  quiz.tsx  reader.tsx  session.tsx  tutor.tsx
client/src/pages/teacher/: ai-advisor.tsx  analytics.tsx  books.tsx  class-detail.tsx  classes.tsx  dashboard.tsx  plagiarism.tsx  quizzes.tsx  reports.tsx  session.tsx  submissions.tsx
client/src/rust-analyzer/: Cargo.toml
client/src/rust-analyzer/src/: lib.rs
microservices/audio_processing/python-service/: main.py  requirements.txt
microservices/audio_processing/rust-server/: Cargo.toml
microservices/audio_processing/rust-server/src/: main.rs
script/: check-tables.ts  migrate-phase1.ts
server/: agent.ts  index.ts  routes.ts  socket.ts  storage.ts
shared/: schema.ts
