[package]
name = "rust-audio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws", "multipart"] }
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["multipart", "stream", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures-util = "0.3.31"
bytes = "1.10.0"
uuid = { version = "1.14.0", features = ["v4"] }
